--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
 body {
     width: 100%;
     height: 100vh;
+    background-color: grey;
     background-image: url(../assets/img/bg.jpg);
     background-position: center;
     background-size: cover;
@@ -106,4 +107,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+.active-item{
+    color: red;
 }
